<resources>

    <string name="app_name">3Qs Express</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_drslist">DRS List</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_scanpickup">Scan pickup</string>
    <string name="title_activity_drshistory">DRS History</string>
    <string name="title_activity_sacn_drs">Sacn DRS</string>
    <string name="title_activity_pickup_list">Pick upList</string>
    <string name="title_activity_pickup_history">Pickup History</string>


    <string name="dash_title_dash">Dashboard</string>
    <string name="dash_title_profile">Profile</string>
    <string name="dash_title_drslist">DRS List</string>
    <string name="dash_title_drshistory">DRS History</string>
    <string name="dash_title_pickuplist">Pickup List</string>
    <string name="dash_title_pickuphistory">Pickup History</string>
    <string name="dash_title_Scan">Scan DRS</string>
    <string name="dash_title_scanpickup">Scan Pickup</string>
    <string name="dash_title_logout">Logout</string>
    <string name="dash_title_editProfile">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_register">Register</string>


    <!--Register Hint-->

    <string name="reg_Name">Enter  Name</string>
    <string name="reg_country">Enter Country</string>
    <string name="reg_state">Enter State </string>
    <string name="reg_code">Enter code</string>
    <string name="reg_mobile">Enter Mobile</string>
    <string name="reg_email">Enter Email ID</string>
    <string name="reg_iqama_id">Enter iqama Id</string>
    <string name="reg_licence">Enter Upload license</string>
    <string name="reg_iqmqimg">Enter Upload Iqama/ID</string>
    <string name="reg_vehicle_type">Enter Vehicle Type</string>
    <string name="reg_supplier">Enter Supplier</string>
    <string name="reg_joinDate">Enter Join Date</string>
    <string name="reg_password">Enter Password</string>
    <string name="reg_vehicle_number">Enter Vehicle Number</string>
    <string name="reg_profile">Enter Profile Image</string>
    <string name="reg_btn">Register </string>


    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="forgotEmail">Email Id</string>
    <string name="newpassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgotbtn">Change Password</string>
    <string name="title_activity_splash">LogIn</string>
    <string name="title_activity_delivery_update">Delivery Update</string>


    <string-array name="DeliveryStatus">
        <item>-Select-</item>
        <item>PickUp</item>
        <item>intransit</item>
        <item>arrived to designation</item>
        <item>out For Delievery</item>
        <item>delievery</item>

    </string-array>

    <string name="dvTrackID">Track ID</string>
    <string name="dvdateTime">Date Time</string>
    <string name="dvPaymentType">Payment Mode</string>
    <string name="dvaccountNo">Account No</string>
    <string name="dvSenderName">Sender Name</string>
    <string name="dvSenderAddress">Sender Address</string>
    <string name="dvsenderContactDetails">Sender Contact Details</string>
    <string name="dvReciverName">Reciver Name</string>
    <string name="dvReciveerAddress">Reciver Address</string>
    <string name="dvReciverContactDetails">Reciver Contact Details</string>

    <string name="dvParcaleInfo">Parcel Info</string>
    <string name="dvChargesInfo">Charges Info</string>


    <string name="shipment_status">Shipment Status</string>
    <string name="title_activity_pickup_update">Pickup Update</string>
</resources>
