<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activty.ForgotPassword"
    tools:showIn="@layout/activity_forgot_password">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotEmail"
            android:hint="@string/forgotEmail"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassword"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotconfirmPassword"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotbtn"
            android:id="@+id/forgotbtn"
            android:onClick="getForGotPassword"></Button>
    </LinearLayout>

</RelativeLayout>